--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,12 +15,12 @@
 </li>
 <li>
             {% if site.phone %}
-            Call {{ site.phone | escape }}
+            Call: {{ site.phone | escape }}
             {% endif %}
             </li>
 <li>
             {% if site.email %}
-            email: <a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {% endif %}
 
           </h3>
